[package]
name = "mobfs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive", "env"] }
console = "0.16.1"
dirs = "6.0.0"
filetime = "0.2.26"
hex = "0.4.3"
indicatif = "0.18.3"
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
toml = "0.9.8"
walkdir = "2.5.0"
